@@ -1,6 +1,9 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.222 2005/04/15 16:49:45 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.223 2005/04/18 14:11:23 rocket Exp $
+
+  18 Apr 2005; Eric Edgar <rocket@gentoo.org> modules/grp_target.py:
+  Fix grp/use bug #89365
 
   15 Apr 2005; Eric Edgar <rocket@gentoo.org>
   modules/generic_stage_target.py, targets/support/kmerge.sh:
